<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">IoT Robot Control</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="customactivityoncrash_error_activity_error_occurred_explanation">"It's not you, It's us &#128522; \n\nServer is high on spirit &#129396; \n\n(Sending error report to developer)"</string>
    <string name="customactivityoncrash_error_activity_restart_app">Home</string>
    <string name="customactivityoncrash_error_activity_close_app">Close app</string>
    <string name="customactivityoncrash_error_activity_error_details">Error Report</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Error Report</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copy to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Copied to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Error information</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="wait">Please wait…</string>
    <string name="warming_up">Warming up…</string>
    <string name="serverConnect">Contacting server…</string>
    <string name="connected">All set</string>
    <string name="startClick">Click to start</string>
    <string name="wakingrobot">Waking Robot…</string>
    <string name="wakingExc">Waking Excavator…</string>
    <string name="notification_channel_id">Robot</string>
    <string name="notification_channel_id_ex">Excavator</string>
    <string name="write">Reset\nto 0</string>
    <string name="button3">Buzz</string>
    <string name="engineSound">Engine\nsound</string>
    <string name="lights">Lights</string>
    <string name="button4">Fake\nCrash</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="base">Base</string>
    <string name="main_arm">Main Arm</string>
    <string name="second_arm">Second Arm</string>
    <string name="rotate_gripper">Rotate Gripper</string>
    <string name="gripper">Release</string>
    <string name="joystick_noff">Joystick\nOFF</string>
    <string name="joystick_non">Joystick\nON</string>
    <string name="dance_off">Dance\nOFF</string>
    <string name="dance_on">Dance\nON</string>
    <string name="buz_noff">Buzzer\nOFF</string>
    <string name="buz_non">Buzzer\nON</string>
    <string name="eng_non">Power\nON</string>
    <string name="eng_noff">Power\nOFF</string>
    <string name="mapinfo">Last Updated on :</string>
    <string name="defaultPos">Start\nPosition</string>
    <string name="last_updated_on">Last updated on : </string>
    <string name="gpsStat">"No of GPS satellites :  "</string>
    <string name="gpsAlt">GPS Altitude : </string>
    <string name="gpsSpeed">GPS velocity : </string>
    <string name="bv">Battery Voltage</string>
    <string name="gpsLat">Latitude : </string>
    <string name="gpsLong">Longitude : </string>
    <string name="select_the_client_machine">Select client machine</string>
    <string name="robot_arm">Robot Arm</string>
    <string name="excavator">Excavator</string>
    <string name="title_activity_excavator">ExcavatorActivity</string>

    <string name="_600dp">600dp</string>
    <string name="stand_up">Stand Up</string>
    <string name="pose1" tools:ignore="Typos">Pose 1</string>
    <string name="pose2" tools:ignore="Typos">Pose 2</string>
    <string name="rotate_nright">Release</string>
    <string name="rotate_nleft">Grab</string>
    <string name="move">Move</string>
    <string name="grab">Grab</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="phone_no_excavator">+447915722291</string>
    <string name="phone_no_robot">+447442655745</string>
    <string name="tablet_mode">Tablet Mode</string>
    <string name="default_mode">Default Mode</string>
    <string name="excavator1">Excavator</string>
    <string name="go_to_nexcavator">Go to\nExcavator</string>
    <string name="turn_right">Turn Right</string>
    <string name="please_wait">Please wait…</string>
    <string name="listening">Listening…</string>
    <string name="downloading_firmware_to_esp32">Downloading &amp; updating firmware</string>
    <string name="updatefirmware">Firmware Updated Successfully</string>
    <string name="serial_text">Serial text</string>

    <string name="hello_world">Hello world!</string>
    <string name="serial_port">Serial Port</string>
    <string name="send">Send</string>
    <string name="chatInputHint">Type serial text to send</string>
    <string name="sendChatButton">Send</string>
    <string name="bucket_nangle">Bucket\nAngle</string>
    <string name="clear">Clear</string>
    <string name="right">Right</string>
    <string name="turn_left">Turn Left</string>
    <string name="turn_right1">Turn Right</string>
    <string name="arm2">Arm2</string>
    <string name="arm1">Arm1</string>
    <string name="reverse">Reverse</string>
    <string name="forward">Forward</string>
    <string name="left">Left</string>

</resources>