<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Splash">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_3sdp"
        android:text="@string/_600dp"
        android:textColor="@color/font_grey_settings"
        android:textSize="@dimen/_5ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/ttlLogoShimmer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shimmer_auto_start="true"
        app:shimmer_base_alpha="0.75"
        app:shimmer_direction="left_to_right"
        app:shimmer_duration="1200"
        app:shimmer_highlight_alpha="1"
        app:shimmer_highlight_color="@color/white"
        app:shimmer_repeat_delay="700">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motionLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/activity_splash_scene"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_10ssp"
            app:motionProgress="0">

            <ImageView
                android:id="@+id/ttlLogo"
                android:layout_width="@dimen/_530sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/avd_ttl"
                app:layout_constraintBottom_toTopOf="@id/imageContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside"
                tools:ignore="ContentDescription" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/imageContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ttlLogo">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/googleSignInButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:insetBottom="0dp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/selectClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/select_the_client_machine"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/font_yellowDark"/>

                <ImageView
                    android:id="@+id/robotArm"
                    android:visibility="visible"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:src="@drawable/robot"
                    android:clickable="true"
                    android:focusable="true"
                    android:tag="RobotArm"
                    android:onClick="selectClientMachine"
                    app:layout_constraintHorizontal_bias="0.54"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:layout_constraintEnd_toStartOf="@+id/huina"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/selectClient"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/robotText"
                    android:layout_width="wrap_content"
                    android:visibility="visible"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:tag="RobotArm"
                    android:onClick="selectClientMachine"
                    app:layout_constraintStart_toStartOf="@id/robotArm"
                    app:layout_constraintEnd_toEndOf="@id/robotArm"
                    app:layout_constraintTop_toBottomOf="@id/robotArm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/robot_arm"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/font_yellow"/>

                <ImageView
                    android:id="@+id/huina"
                    android:visibility="visible"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/excavator"
                    android:tag="Excavator"
                    android:onClick="selectClientMachine"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/robotArm"
                    app:layout_constraintTop_toBottomOf="@id/selectClient"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/huinaText"
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="Excavator"
                    android:onClick="selectClientMachine"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintStart_toStartOf="@id/huina"
                    app:layout_constraintEnd_toEndOf="@id/huina"
                    app:layout_constraintTop_toBottomOf="@id/huina"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/excavator"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/font_yellow"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.motion.widget.MotionLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_35sdp"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:indeterminateDrawable="@drawable/indeter_progress"
        android:indeterminateDuration="2000"
        android:indeterminateOnly="true"
        android:progressDrawable="@drawable/progress_splash"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieView"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_140sdp"
        android:clickable="true"
        android:focusable="true"
        android:scaleX="2.2"
        android:scaleY="2.2"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_enableMergePathsForKitKatAndAbove="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/robotworkout"
        app:lottie_repeatMode="restart"
        app:lottie_speed="1.3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wait"
        android:textColor="@color/font_grey_settings"
        android:textSize="@dimen/_8ssp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/warmingup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/warmingup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warming_up"
        android:textColor="@color/font_yellow"
        android:textSize="@dimen/_10ssp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/lottieView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>